--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/parser": "7.23.4",
-    "meriyah": "4.3.8"
+    "meriyah": "4.3.8",
+    "prettier": "^3.2.4"
   }
 }
